Update responsive breakpoint

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 /* Responsive Breakpoint */
-@custom-media --large-viewport (min-width: 30em);
-
+@custom-media --large-viewport (min-width: 600px);
 /* Mobile First */
 :root {
   --fs-heading-01: 32px;
@@ -9,10 +8,6 @@
   --fs-heading-04: 20px;
   --fs-heading-05: 18px;
   --fs-heading-06: 16px;
-
-  --tracking-heading-01: -0.8px;
-  --tracking-heading-02: -0.4px;
-  --tracking-heading-03: -0.4px;
 
   --fs-body-xl: 16px;
   --fs-body: 14px;
@@ -36,6 +31,10 @@
   --lh-caption: 16px;
   --lh-helper-text: 16px;
   --lh-code: 20px;
+  
+  --tracking-heading-01: -0.8px;
+  --tracking-heading-02: -0.4px;
+  --tracking-heading-03: -0.4px;
 }
 
 /* Desktop */
@@ -47,10 +46,6 @@
     --fs-heading-04: 28px;
     --fs-heading-05: 20px;
     --fs-heading-06: 18px;
-
-    --tracking-heading-01: -1.2px;
-    --tracking-heading-02: -0.8px;
-    --tracking-heading-03: -0.4px;
 
     --fs-body-xl: 18px;
     --fs-body: 16px;
@@ -74,6 +69,10 @@
     --lh-caption: 16px;
     --lh-helper-text: 16px;
     --lh-code: 20px;
+
+    --tracking-heading-01: -1.2px;
+    --tracking-heading-02: -0.8px;
+    --tracking-heading-03: -0.4px;
   }
 }
 
@@ -93,7 +92,7 @@
 .text-center { text-align: center; }
 .text-justify { text-align: justify; }
 
-/* Font styles */
+/* Font family */
 .serif { font-family: georgia, serif; }
 .sans-serif { font-family: 'Inter', sans-serif; }
 .code { font-family: 'JetBrains Mono', monospace; }
