--- a/index.css
+++ b/index.css
@@ -1,80 +1,76 @@
 /* Responsive Breakpoint */
 @custom-media --large-viewport (min-width: 600px);
 
-/* Mobile First */
 :root {
-  --fs-heading-01: 32px;
-  --fs-heading-02: 28px;
-  --fs-heading-03: 24px;
-  --fs-heading-04: 20px;
-  --fs-heading-05: 18px;
-  --fs-heading-06: 16px;
+  /* Mobile */
+  --fs-mobile-heading-01: 32px;
+  --fs-mobile-heading-02: 28px;
+  --fs-mobile-heading-03: 24px;
+  --fs-mobile-heading-04: 20px;
+  --fs-mobile-heading-05: 18px;
+  --fs-mobile-heading-06: 16px;
 
-  --fs-body-xl: 16px;
-  --fs-body: 14px;
-  --fs-body-sm: 12px;
+  --fs-mobile-body-xl: 16px;
+  --fs-mobile-body: 14px;
+  --fs-mobile-body-sm: 12px;
+
+  --fs-mobile-caption: 12px;
+  --fs-mobile-helper-text: 12px;
+  --fs-mobile-code: 14px;
+
+  --lh-mobile-heading-01: 40px;
+  --lh-mobile-heading-02: 36px;
+  --lh-mobile-heading-03: 30px;
+  --lh-mobile-heading-04: 28px;
+  --lh-mobile-heading-05: 26px;
+  --lh-mobile-heading-06: 24px;
+
+  --lh-mobile-body-xl: 24px;
+  --lh-mobile-body: 20px;
+  --lh-mobile-body-sm: 16px;
+
+  --lh-mobile-caption: 16px;
+  --lh-mobile-helper-text: 16px;
+  --lh-mobile-code: 20px;
+  
+  --tracking-mobile-heading-01: -0.8px;
+  --tracking-mobile-heading-02: -0.4px;
+  --tracking-mobile-heading-03: -0.4px;
+
+/* Desktop */
+  --fs-heading-01: 54px;
+  --fs-heading-02: 42px;
+  --fs-heading-03: 32px;
+  --fs-heading-04: 28px;
+  --fs-heading-05: 20px;
+  --fs-heading-06: 18px;
+
+  --fs-body-xl: 18px;
+  --fs-body: 16px;
+  --fs-body-sm: 14px;
 
   --fs-caption: 12px;
   --fs-helper-text: 12px;
   --fs-code: 14px;
 
-  --lh-heading-01: 40px;
-  --lh-heading-02: 36px;
-  --lh-heading-03: 30px;
-  --lh-heading-04: 28px;
-  --lh-heading-05: 26px;
-  --lh-heading-06: 24px;
+  --lh-heading-01: 64px;
+  --lh-heading-02: 50px;
+  --lh-heading-03: 40px;
+  --lh-heading-04: 36px;
+  --lh-heading-05: 28px;
+  --lh-heading-06: 26px;
 
-  --lh-body-xl: 24px;
-  --lh-body: 20px;
-  --lh-body-sm: 16px;
+  --lh-body-xl: 26px;
+  --lh-body: 24px;
+  --lh-body-sm: 20px;
 
   --lh-caption: 16px;
   --lh-helper-text: 16px;
   --lh-code: 20px;
-  
-  --tracking-heading-01: -0.8px;
-  --tracking-heading-02: -0.4px;
+
+  --tracking-heading-01: -1.2px;
+  --tracking-heading-02: -0.8px;
   --tracking-heading-03: -0.4px;
-}
-
-/* Desktop */
-@media screen and (--large-viewport) {
-  :root {
-    --fs-heading-01: 54px;
-    --fs-heading-02: 42px;
-    --fs-heading-03: 32px;
-    --fs-heading-04: 28px;
-    --fs-heading-05: 20px;
-    --fs-heading-06: 18px;
-
-    --fs-body-xl: 18px;
-    --fs-body: 16px;
-    --fs-body-sm: 14px;
-
-    --fs-caption: 12px;
-    --fs-helper-text: 12px;
-    --fs-code: 14px;
-
-    --lh-heading-01: 64px;
-    --lh-heading-02: 50px;
-    --lh-heading-03: 40px;
-    --lh-heading-04: 36px;
-    --lh-heading-05: 28px;
-    --lh-heading-06: 26px;
-
-    --lh-body-xl: 26px;
-    --lh-body: 24px;
-    --lh-body-sm: 20px;
-
-    --lh-caption: 16px;
-    --lh-helper-text: 16px;
-    --lh-code: 20px;
-
-    --tracking-heading-01: -1.2px;
-    --tracking-heading-02: -0.8px;
-    --tracking-heading-03: -0.4px;
-  }
 }
 
 /* Font Weights */
@@ -101,60 +97,122 @@
 /* Components */
 .h1 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-01);
-  line-height: var(--lh-heading-01);
-  letter-spacing: var(--tracking-heading-01);
+  font-size: var(--fs-mobile-heading-01);
+  line-height: var(--lh-mobile-heading-01);
+  letter-spacing: var(--tracking-mobile-heading-01);
 }
 
 .h2 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-02);
-  line-height: var(--lh-heading-02);
-  letter-spacing: var(--tracking-heading-02);
+  font-size: var(--fs-mobile-heading-02);
+  line-height: var(--lh-mobile-heading-02);
+  letter-spacing: var(--tracking-mobile-heading-02);
 }
 
 .h3 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-03);
-  line-height: var(--lh-heading-03);
-  letter-spacing: var(--tracking-heading-03);
+  font-size: var(--fs-mobile-heading-03);
+  line-height: var(--lh-mobile-heading-03);
+  letter-spacing: var(--tracking-mobile-heading-03);
 }
 
 .h4 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-04);
-  line-height: var(--lh-heading-04);
+  font-size: var(--fs-mobile-heading-04);
+  line-height: var(--lh-mobile-heading-04);
 }
 
 .h5 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-05);
-  line-height: var(--lh-heading-05);
+  font-size: var(--fs-mobile-heading-05);
+  line-height: var(--lh-mobile-heading-05);
 }
 
 .h6 {
   @extend .fw-bold;
-  font-size: var(--fs-heading-06);
-  line-height: var(--lh-heading-06);
+  font-size: var(--fs-mobile-heading-06);
+  line-height: var(--lh-mobile-heading-06);
 }
 
 .fs-lead {
-  font-size: var(--fs-body-xl);
+  font-size: var(--fs-mobile-body-xl);
 }
 
 .caption {
   @extend .fw-semi-bold;
   text-transform: uppercase;
-  font-size: var(--fs-caption);
-  line-height: var(--lh-caption);
+  font-size: var(--fs-mobile-caption);
+  line-height: var(--lh-mobile-caption);
 }
 
 .helper-text {
-  font-size: var(--fs-helper-text);
-  line-height: var(--lh-helper-text);
+  font-size: var(--fs-mobile-helper-text);
+  line-height: var(--lh-mobile-helper-text);
 }
 
 .code {
-  font-size: var(--fs-code);
-  line-height: var(--lh-code);
+  font-size: var(--fs-mobile-code);
+  line-height: var(--lh-mobile-code);
+}
+
+@media screen and (--large-viewport) {
+  .h1 {
+    @extend .fw-bold;
+    font-size: var(--fs-heading-01);
+    line-height: var(--lh-heading-01);
+    letter-spacing: var(--tracking-heading-01);
+  }
+
+  .h2 {
+    @extend .fw-bold;
+    font-size: var(--fs-heading-02);
+    line-height: var(--lh-heading-02);
+    letter-spacing: var(--tracking-heading-02);
+  }
+
+  .h3 {
+    @extend .fw-bold;
+    font-size: var(--fs-heading-03);
+    line-height: var(--lh-heading-03);
+    letter-spacing: var(--tracking-heading-03);
+  }
+
+  .h4 {
+    @extend .fw-bold;
+    font-size: var(--fs-heading-04);
+    line-height: var(--lh-heading-04);
+  }
+
+  .h5 {
+    @extend .fw-bold;
+    font-size: var(--fs-heading-05);
+    line-height: var(--lh-heading-05);
+  }
+
+  .h6 {
+    @extend .fw-semi-bold;
+    font-size: var(--fs-heading-06);
+    line-height: var(--lh-heading-06);
+  }
+
+  .fs-lead {
+    font-size: var(--fs-body-xl);
+  }
+
+  .caption {
+    @extend .fw-semi-bold;
+    text-transform: uppercase;
+    font-size: var(--fs-caption);
+    line-height: var(--lh-caption);
+  }
+
+  .helper-text {
+    font-size: var(--fs-helper-text);
+    line-height: var(--lh-helper-text);
+  }
+
+  .code {
+    font-size: var(--fs-code);
+    line-height: var(--lh-code);
+  }
 }
