--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -46,7 +46,7 @@
 
 /* Font family */
 .nu-u-serif {
-  font-family: georgia, serif;
+  font-family: 'Editorial', georgia, serif;
 }
 
 .nu-u-sans-serif {
