Update utility names

--- a/src/_utilities.scss
+++ b/src/_utilities.scss
@@ -12,35 +12,35 @@
 }
 
 /* Utilities */
-.nu-u-text-uppercase {
+.nu-u-text--uppercase {
   text-transform: uppercase;
 }
 
-.nu-u-text-lowercase {
+.nu-u-text--lowercase {
   text-transform: lowercase;
 }
 
-.nu-u-text-capitalize {
+.nu-u-text--capitalize {
   text-transform: capitalize;
 }
 
-.nu-u-text-underline {
+.nu-u-text--underline {
   text-decoration: underline;
 }
 
-.nu-u-text-left {
+.nu-u-text--left {
   text-align: left;
 }
 
-.nu-u-text-right {
+.nu-u-text--right {
   text-align: right;
 }
 
-.nu-u-text-center {
+.nu-u-text--center {
   text-align: center;
 }
 
-.nu-u-text-justify {
+.nu-u-text--justify {
   text-align: justify;
 }
 
