--- a/src/_components.scss
+++ b/src/_components.scss
@@ -3,112 +3,112 @@ $mobile-breakpoint: 600px;
 /* Components */
 .nu-c-h1 {
   font-weight: 700;
-  font-size: var(--fs-heading-01);
-  line-height: var(--lh-heading-01);
-  letter-spacing: var(--tracking-heading-01);
+  font-size: var(--desktop-heading-01);
+  line-height: var(--desktop-heading-01);
+  letter-spacing: var(--desktop-tracking-heading-01);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-01);
-    line-height: var(--lh-mobile-heading-01);
-    letter-spacing: var(--tracking-mobile-heading-01);
+    font-size: var(--mobile-heading-01);
+    line-height: var(--mobile-heading-01);
+    letter-spacing: var(--mobile-tracking-heading-01);
   }
 }
 
 .nu-c-h2 {
   font-weight: 700;
-  font-size: var(--fs-heading-02);
-  line-height: var(--lh-heading-02);
-  letter-spacing: var(--tracking-heading-02);
+  font-size: var(--desktop--heading-02);
+  line-height: var(--desktop--heading-02);
+  letter-spacing: var(--desktop-tracking-heading-02);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-02);
-    line-height: var(--lh-mobile-heading-02);
-    letter-spacing: var(--tracking-mobile-heading-02);
+    font-size: var(--mobile-heading-02);
+    line-height: var(--mobile-heading-02);
+    letter-spacing: var(--mobile-tracking-heading-02);
   }
 }
 
 .nu-c-h3 {
   font-weight: 700;
-  font-size: var(--fs-heading-03);
-  line-height: var(--lh-heading-03);
-  letter-spacing: var(--tracking-heading-03);
+  font-size: var(--desktop-heading-03);
+  line-height: var(--desktop-heading-03);
+  letter-spacing: var(--desktop-tracking-heading-03);
   
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-03);
-    line-height: var(--lh-mobile-heading-03);
-    letter-spacing: var(--tracking-mobile-heading-03);
+    font-size: var(--mobile-heading-03);
+    line-height: var(--mobile-heading-03);
+    letter-spacing: var(--mobile-tracking-heading-03);
   }
 }
 
 .nu-c-h4 {
   font-weight: 700;
-  font-size: var(--fs-heading-04);
-  line-height: var(--lh-heading-04);
+  font-size: var(--desktop-heading-04);
+  line-height: var(--desktop-heading-04);
   
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-04);
-    line-height: var(--lh-mobile-heading-04);
+    font-size: var(--mobile-heading-04);
+    line-height: var(--mobile-heading-04);
   }
 }
 
 .nu-c-h5 {
   font-weight: 700;
-  font-size: var(--fs-heading-05);
-  line-height: var(--lh-heading-05);
+  font-size: var(--desktop-heading-05);
+  line-height: var(--desktop-heading-05);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-05);
-    line-height: var(--lh-mobile-heading-05);
+    font-size: var(--mobile-heading-05);
+    line-height: var(--mobile-heading-05);
   }
 }
 
 .nu-c-h6 {
   font-weight: 700;
-  font-size: var(--fs-heading-06);
-  line-height: var(--lh-heading-06);
+  font-size: var(--desktop-heading-06);
+  line-height: var(--desktop-heading-06);
   
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-heading-06);
-    line-height: var(--lh-mobile-heading-06);
+    font-size: var(--mobile-heading-06);
+    line-height: var(--mobile-heading-06);
   }
 }
 
 .nu-c-fs-lead {
-  font-size: var(--fs-body-xl);
+  font-size: var(--desktop-body-xl);
   
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-body-xl);
+    font-size: var(--mobile-body-xl);
   }
 }
 
 .nu-c-caption {
   font-weight: 500;
   text-transform: uppercase;
-  font-size: var(--fs-caption);
-  line-height: var(--lh-caption);
+  font-size: var(--desktop-caption);
+  line-height: var(--desktop-caption);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-caption);
-    line-height: var(--lh-mobile-caption);
+    font-size: var(--mobile-caption);
+    line-height: var(--mobile-caption);
   }
 }
 
 .nu-c-helper-text {
-  font-size: var(--fs-helper-text);
-  line-height: var(--lh-helper-text);
+  font-size: var(--desktop-helper-text);
+  line-height: var(--desktop-helper-text);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-helper-text);
-    line-height: var(--lh-mobile-helper-text);
+    font-size: var(--mobile-helper-text);
+    line-height: var(--mobile-helper-text);
   }
 }
 
 .nu-c-code {
-  font-size: var(--fs-code);
-  line-height: var(--lh-code);
+  font-size: var(--desktop-code);
+  line-height: var(--desktop-code);
 
   @media screen and (max-width: $mobile-breakpoint) {
-    font-size: var(--fs-mobile-code);
-    line-height: var(--lh-mobile-code);
+    font-size: var(--mobile-code);
+    line-height: var(--mobile-code);
   }
 }
