--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,71 +1,71 @@
 :root {
   /* Mobile */
-  --fs-mobile-heading-01: 32px;
-  --fs-mobile-heading-02: 28px;
-  --fs-mobile-heading-03: 24px;
-  --fs-mobile-heading-04: 20px;
-  --fs-mobile-heading-05: 18px;
-  --fs-mobile-heading-06: 16px;
+  --mobile-heading-01: 32px;
+  --mobile-heading-02: 28px;
+  --mobile-heading-03: 24px;
+  --mobile-heading-04: 20px;
+  --mobile-heading-05: 18px;
+  --mobile-heading-06: 16px;
 
-  --fs-mobile-body-xl: 16px;
-  --fs-mobile-body: 14px;
-  --fs-mobile-body-sm: 12px;
+  --mobile-body-xl: 16px;
+  --mobile-body: 14px;
+  --mobile-body-sm: 12px;
 
-  --fs-mobile-caption: 12px;
-  --fs-mobile-helper-text: 12px;
-  --fs-mobile-code: 14px;
+  --mobile-caption: 12px;
+  --mobile-helper-text: 12px;
+  --mobile-code: 14px;
 
-  --lh-mobile-heading-01: 40px;
-  --lh-mobile-heading-02: 36px;
-  --lh-mobile-heading-03: 30px;
-  --lh-mobile-heading-04: 28px;
-  --lh-mobile-heading-05: 26px;
-  --lh-mobile-heading-06: 24px;
+  --mobile-heading-01: 40px;
+  --mobile-heading-02: 36px;
+  --mobile-heading-03: 30px;
+  --mobile-heading-04: 28px;
+  --mobile-heading-05: 26px;
+  --mobile-heading-06: 24px;
 
-  --lh-mobile-body-xl: 24px;
-  --lh-mobile-body: 20px;
-  --lh-mobile-body-sm: 16px;
+  --mobile-body-xl: 24px;
+  --mobile-body: 20px;
+  --mobile-body-sm: 16px;
 
-  --lh-mobile-caption: 16px;
-  --lh-mobile-helper-text: 16px;
-  --lh-mobile-code: 20px;
+  --mobile-caption: 16px;
+  --mobile-helper-text: 16px;
+  --mobile-code: 20px;
 
-  --tracking-mobile-heading-01: -0.8px;
-  --tracking-mobile-heading-02: -0.4px;
-  --tracking-mobile-heading-03: -0.4px;
+  --mobile-tracking-heading-01: -0.8px;
+  --mobile-tracking-heading-02: -0.4px;
+  --mobile-tracking-heading-03: -0.4px;
 
   /* Desktop */
-  --fs-heading-01: 54px;
-  --fs-heading-02: 42px;
-  --fs-heading-03: 32px;
-  --fs-heading-04: 28px;
-  --fs-heading-05: 20px;
-  --fs-heading-06: 18px;
+  --desktop-heading-01: 54px;
+  --desktop-heading-02: 42px;
+  --desktop-heading-03: 32px;
+  --desktop-heading-04: 28px;
+  --desktop-heading-05: 20px;
+  --desktop-heading-06: 18px;
 
-  --fs-body-xl: 18px;
-  --fs-body: 16px;
-  --fs-body-sm: 14px;
+  --desktop-body-xl: 18px;
+  --desktop-body: 16px;
+  --desktop-body-sm: 14px;
 
-  --fs-caption: 12px;
-  --fs-helper-text: 12px;
-  --fs-code: 14px;
+  --desktop-caption: 12px;
+  --desktop-helper-text: 12px;
+  --desktop-code: 14px;
 
-  --lh-heading-01: 64px;
-  --lh-heading-02: 50px;
-  --lh-heading-03: 40px;
-  --lh-heading-04: 36px;
-  --lh-heading-05: 28px;
-  --lh-heading-06: 26px;
+  --desktop-heading-01: 64px;
+  --desktop-heading-02: 50px;
+  --desktop-heading-03: 40px;
+  --desktop-heading-04: 36px;
+  --desktop-heading-05: 28px;
+  --desktop-heading-06: 26px;
 
-  --lh-body-xl: 26px;
-  --lh-body: 24px;
-  --lh-body-sm: 20px;
+  --desktop-body-xl: 26px;
+  --desktop-body: 24px;
+  --desktop-body-sm: 20px;
 
-  --lh-caption: 16px;
-  --lh-helper-text: 16px;
-  --lh-code: 20px;
+  --desktop-caption: 16px;
+  --desktop-helper-text: 16px;
+  --desktop-code: 20px;
 
-  --tracking-heading-01: -1.2px;
-  --tracking-heading-02: -0.8px;
-  --tracking-heading-03: -0.4px;
+  --desktop-tracking-heading-01: -1.2px;
+  --desktop-tracking-heading-02: -0.8px;
+  --desktop-tracking-heading-03: -0.4px;
 }
