--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -22,13 +22,13 @@
   --mobile-heading-05: 26px;
   --mobile-heading-06: 24px;
 
-  --mobile-body-xl: 24px;
-  --mobile-body: 20px;
-  --mobile-body-sm: 16px;
+  --lh-mobile-body-xl: 24px;
+  --lh-mobile-body: 20px;
+  --lh-mobile-body-sm: 16px;
 
-  --mobile-caption: 16px;
-  --mobile-helper-text: 16px;
-  --mobile-code: 20px;
+  --lh-mobile-caption: 16px;
+  --lh-mobile-helper-text: 16px;
+  --lh-mobile-code: 20px;
 
   --mobile-tracking-heading-01: -0.8px;
   --mobile-tracking-heading-02: -0.4px;
@@ -57,13 +57,13 @@
   --desktop-heading-05: 28px;
   --desktop-heading-06: 26px;
 
-  --desktop-body-xl: 26px;
-  --desktop-body: 24px;
-  --desktop-body-sm: 20px;
+  --lh-desktop-body-xl: 26px;
+  --lh-desktop-body: 24px;
+  --lh-desktop-body-sm: 20px;
 
-  --desktop-caption: 16px;
-  --desktop-helper-text: 16px;
-  --desktop-code: 20px;
+  --lh-desktop-caption: 16px;
+  --lh-desktop-helper-text: 16px;
+  --lh-desktop-code: 20px;
 
   --desktop-tracking-heading-01: -1.2px;
   --desktop-tracking-heading-02: -0.8px;
