Fix heading font sizes and line height

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -15,12 +15,12 @@
   --mobile-helper-text: 12px;
   --mobile-code: 14px;
 
-  --mobile-heading-01: 40px;
-  --mobile-heading-02: 36px;
-  --mobile-heading-03: 30px;
-  --mobile-heading-04: 28px;
-  --mobile-heading-05: 26px;
-  --mobile-heading-06: 24px;
+  --lh-mobile-heading-01: 40px;
+  --lh-mobile-heading-02: 36px;
+  --lh-mobile-heading-03: 30px;
+  --lh-mobile-heading-04: 28px;
+  --lh-mobile-heading-05: 26px;
+  --lh-mobile-heading-06: 24px;
 
   --lh-mobile-body-xl: 24px;
   --lh-mobile-body: 20px;
@@ -50,12 +50,12 @@
   --desktop-helper-text: 12px;
   --desktop-code: 14px;
 
-  --desktop-heading-01: 64px;
-  --desktop-heading-02: 50px;
-  --desktop-heading-03: 40px;
-  --desktop-heading-04: 36px;
-  --desktop-heading-05: 28px;
-  --desktop-heading-06: 26px;
+  --lh-desktop-heading-01: 64px;
+  --lh-desktop-heading-02: 50px;
+  --lh-desktop-heading-03: 40px;
+  --lh-desktop-heading-04: 36px;
+  --lh-desktop-heading-05: 28px;
+  --lh-desktop-heading-06: 26px;
 
   --lh-desktop-body-xl: 26px;
   --lh-desktop-body: 24px;
