--- a/src/_components.scss
+++ b/src/_components.scss
@@ -16,7 +16,7 @@ $mobile-breakpoint: 600px;
 
 .nu-c-h2 {
   font-weight: 700;
-  font-size: var(--desktop--heading-02);
+  font-size: var(--desktop-heading-02);
   line-height: var(--lh-desktop-heading-02);
   letter-spacing: var(--desktop-tracking-heading-02);
 
