--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -17,72 +17,72 @@
   --handwritten: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
 
   /* Mobile */
-  --mobile-heading-01: 32px;
-  --mobile-heading-02: 28px;
-  --mobile-heading-03: 24px;
-  --mobile-heading-04: 20px;
-  --mobile-heading-05: 18px;
-  --mobile-heading-06: 16px;
+  --mobile-heading-01: 2rem;
+  --mobile-heading-02: 1.75rem;
+  --mobile-heading-03: 1.5rem;
+  --mobile-heading-04: 1.25rem;
+  --mobile-heading-05: 1.125rem;
+  --mobile-heading-06: 1rem;
 
-  --mobile-body-xl: 16px;
-  --mobile-body: 14px;
-  --mobile-body-sm: 12px;
+  --mobile-body-xl: 1rem;
+  --mobile-body: 0.875rem;
+  --mobile-body-sm: 0.75rem;
 
-  --mobile-caption: 12px;
-  --mobile-helper-text: 12px;
-  --mobile-code: 14px;
+  --mobile-caption: 0.75rem;
+  --mobile-helper-text: 0.75rem;
+  --mobile-code: 0.875rem;
 
-  --lh-mobile-heading-01: 40px;
-  --lh-mobile-heading-02: 36px;
-  --lh-mobile-heading-03: 30px;
-  --lh-mobile-heading-04: 28px;
-  --lh-mobile-heading-05: 26px;
-  --lh-mobile-heading-06: 24px;
+  --lh-mobile-heading-01: 2.5rem;
+  --lh-mobile-heading-02: 2.25rem;
+  --lh-mobile-heading-03: 1.875rem;
+  --lh-mobile-heading-04: 1.75rem;
+  --lh-mobile-heading-05: 1.625rem;
+  --lh-mobile-heading-06: 1.5rem;
 
-  --lh-mobile-body-xl: 24px;
-  --lh-mobile-body: 20px;
-  --lh-mobile-body-sm: 16px;
+  --lh-mobile-body-xl: 1.5rem;
+  --lh-mobile-body: 1.25rem;
+  --lh-mobile-body-sm: 1rem;
 
-  --lh-mobile-caption: 16px;
-  --lh-mobile-helper-text: 16px;
-  --lh-mobile-code: 20px;
+  --lh-mobile-caption: 1rem;
+  --lh-mobile-helper-text: 1rem;
+  --lh-mobile-code: 1.25rem;
 
-  --mobile-tracking-heading-01: -0.8px;
-  --mobile-tracking-heading-02: -0.4px;
-  --mobile-tracking-heading-03: -0.4px;
+  --mobile-tracking-heading-01: -0.05rem;
+  --mobile-tracking-heading-02: -0.025rem;
+  --mobile-tracking-heading-03: -0.025rem;
 
   /* Desktop */
-  --desktop-heading-01: 54px;
-  --desktop-heading-02: 42px;
-  --desktop-heading-03: 32px;
-  --desktop-heading-04: 28px;
-  --desktop-heading-05: 20px;
-  --desktop-heading-06: 18px;
+  --desktop-heading-01: 3.375rem;
+  --desktop-heading-02: 2.625rem;
+  --desktop-heading-03: 2rem;
+  --desktop-heading-04: 1.75rem;
+  --desktop-heading-05: 1.25rem;
+  --desktop-heading-06: 1.125rem;
 
-  --desktop-body-xl: 18px;
-  --desktop-body: 16px;
-  --desktop-body-sm: 14px;
+  --desktop-body-xl: 1.125rem;
+  --desktop-body: 1rem;
+  --desktop-body-sm: 0.875rem;
 
-  --desktop-caption: 12px;
-  --desktop-helper-text: 12px;
-  --desktop-code: 14px;
+  --desktop-caption: 0.75rem;
+  --desktop-helper-text: 0.75rem;
+  --desktop-code: 0.875rem;
 
-  --lh-desktop-heading-01: 64px;
-  --lh-desktop-heading-02: 50px;
-  --lh-desktop-heading-03: 40px;
-  --lh-desktop-heading-04: 36px;
-  --lh-desktop-heading-05: 28px;
-  --lh-desktop-heading-06: 26px;
+  --lh-desktop-heading-01: 4rem;
+  --lh-desktop-heading-02: 3.125rem;
+  --lh-desktop-heading-03: 2.5rem;
+  --lh-desktop-heading-04: 2.25rem;
+  --lh-desktop-heading-05: 1.75rem;
+  --lh-desktop-heading-06: 1.625rem;
 
-  --lh-desktop-body-xl: 26px;
-  --lh-desktop-body: 24px;
-  --lh-desktop-body-sm: 20px;
+  --lh-desktop-body-xl: 1.625rem;
+  --lh-desktop-body: 1.5rem;
+  --lh-desktop-body-sm: 1.25rem;
 
-  --lh-desktop-caption: 16px;
-  --lh-desktop-helper-text: 16px;
-  --lh-desktop-code: 20px;
+  --lh-desktop-caption: 1rem;
+  --lh-desktop-helper-text: 1rem;
+  --lh-desktop-code: 1.25rem;
 
-  --desktop-tracking-heading-01: -1.2px;
-  --desktop-tracking-heading-02: -0.8px;
-  --desktop-tracking-heading-03: -0.4px;
+  --desktop-tracking-heading-01: -0.075rem;
+  --desktop-tracking-heading-02: -0.05rem;
+  --desktop-tracking-heading-03: -0.025rem;
 }
